# waqi-python-client

./: .gitignore  README.md  pyproject.toml
src/waqi-python-client/: entities.py  waqi_api.py
tests/: waqi_api_test.py
