[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waqi-python-client"
version = "0.0.1"
authors = [
  { name="Nonso Mgbechi", email="mgbechinonso@gmail.com" },
  { name="Niyi Omotoso", email="omoniyiomotoso@gmail.com" },
]
description = "Python client library for the World Air Quality Index (WAQI) APIs"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/waqi-dev-community/waqi-python-client"
"Bug Tracker" = "https://github.com/waqi-dev-community/waqi-python-client/issues"